# AI_meeting_demo

./: .dockerignore  .gitignore  AUDIO_PROCESSING_EXPLAINED.md  CHUNKING_IMPLEMENTATION.md  DOCKER_GUIDE.md  FFMPEG_IDE_FIX.md  IMPLEMENTATION_STATUS.md  PARALLEL_PROCESSING_EXPLAINED.md  QUICKSTART.md  README.md  REDIS_CONNECTION_GUIDE.md  REDIS_DASHBOARD_GUIDE.md  REDIS_GIT_BASH_GUIDE.md  REDIS_SETUP.md  REDIS_TROUBLESHOOTING.md  ROBUST_CHUNKING_EXPLAINED.md  UV_GUIDE.md  app.py  config.py  docker-compose.yml  pyproject.toml  quick_push.bat  requirements.txt  run_tests.bat  start.bat  test_new_video.py  test_redis_connection.py  verify_docker.bat  verify_setup.py
backend/: .env.example  Dockerfile  app.py  auto_commit.py  config.py  download_test_video.py  main.py  pyproject.toml  test_auto_detection.py  test_batch_processing.py  test_pipeline.py  test_robust_chunking.py
backend/api/v1/: admin.py  batch.py  summary.py  transcription.py  upload.py  websocket.py
backend/models/: schemas.py
backend/prompts/: __init__.py  action_item_prompts.py  content_prompts.py
backend/services/: __init__.py  azure_openai_service.py  content_classifier.py  content_detection.py  summarization_service.py  transcription_service.py
backend/tests/: test_services.py
backend/utils/: __init__.py  audio_processor.py  export_utils.py  file_handler.py  redis_service.py  validators.py  websocket_manager.py
frontend/: README.md  setup.html  tour.html
models/: __init__.py  enums.py  schemas.py
prompts/: summary_prompts.py  transcription_prompts.py
services/: azure_openai_service.py  (+2 more)
(+44 files in other folders)
